-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.6, 6.7.2, 6.8.0 Beta4
-
949e6f2c0 (dev), 0a70c4cb1 (6.8)
-
DaVinci 104, DaVinci 105
https://doc.qt.io/qt-6/qgeojson.html says...
Header: #include <QGeoJson> qmake: QT += location
...but this is actually private API.
It's also missing any CMake instructions at all (see QTBUG-121991)
- depends on
-
QTBUG-121991 As a user of QDoc, I need a way to override the target_link_libraries output from the \qtcmakepackage command.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-128806 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 592155,4 | Doc: Adapt QGeoJson documentation to GeoJsonData QML documentation | dev | qt/qtlocation | Status: MERGED | +2 | 0 |
| 594878,2 | Doc: Adapt QGeoJson documentation to GeoJsonData QML documentation | 6.8 | qt/qtlocation | Status: MERGED | +2 | 0 |