Doc: Adapt QGeoJson documentation to GeoJsonData QML documentation

QGeoJson Namespace is private API in Qt 6 (Qt Location since Qt 6.7) but
documentation lists it as public.

Marked QGeoJson Namespace documentation with \internal.
Moved and adapted the C++ documentation to the QML API documentation.
Updated GeoJsonData documentation to fit the new structure and style.
Tested and updated the snippets.

Fixes: QTBUG-128806
Pick-to: 6.8 6.7
Change-Id: I1869a73914f9425e07cf58f8e7ea47b24ce664cd
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
Reviewed-by: Matthias Rauter <matthias.rauter@qt.io>